--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,26 @@
           <div class="header-logo">
             <img src="assets/logo.png" alt="Logo" />
           </div>
+          <div class="header-hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
           <nav class="header-nav">
             <ul
               class="d-flex justify-content-between align-items-center no-list-style"
             >
               <li><a href="#">Home</a></li>
-              <li class="submenu"><a href="#about">About</a></li>
+              <li class="submenu">
+                <a href="#about" class="submenu-btn"
+                  >About <i class="icon-arrow-down"></i
+                ></a>
+                <ul class="submenu-list">
+                  <li><a href="#about">Company</a></li>
+                  <li><a href="#team">Team</a></li>
+                  <li><a href="#testimonials">Testimonials</a></li>
+                </ul>
+              </li>
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#gallery">Gallery</a></li>
               <li><a href="#contact">Contact</a></li>
@@ -32,7 +46,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
-          <div class="hero-item active-text">
+          <article class="hero-item active-text">
             <h1 class="hero-item__title">Dance Studio</h1>
             <p class="hero-item__subtitle">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
@@ -40,8 +54,8 @@
               nihil molestiae unde!1
             </p>
             <a href="#about" class="btn btn-primary">Learn More</a>
-          </div>
-          <div class="hero-item hero-item--left">
+          </article>
+          <article class="hero-item hero-item--left">
             <h1 class="hero-item__title">Dance Studio</h1>
             <p class="hero-item__subtitle">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
@@ -49,8 +63,8 @@
               nihil molestiae unde!2
             </p>
             <a href="#about" class="btn btn-primary">Learn More</a>
-          </div>
-          <div class="hero-item">
+          </article>
+          <article class="hero-item">
             <h1 class="hero-item__title">Dance Studio</h1>
             <p class="hero-item__subtitle">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
@@ -58,7 +72,7 @@
               nihil molestiae unde!3
             </p>
             <a href="#about" class="btn btn-primary">Learn More</a>
-          </div>
+          </article>
         </div>
       </div>
       <div class="hero-slide">
@@ -71,7 +85,33 @@
         <img src="assets/main-bg-3.jpg" class="" alt="Slide Image 3" />
       </div>
     </section>
-
+    <section class="about" id="about">
+      <div class="container">
+        <h2 class="about-title title">About us</h2>
+        <div class="divider"></div>
+        <article class="about-inner d-flex justify-content-between align-items-start">
+          <img
+            src="assets/three-little-ballet-girls-tutu-posing-together-1.png.jpg"
+            alt="About us Photo"
+            class="about-inner__img"
+          />
+          <div class="about-inner__content">
+            <p>
+              The Maria Levitskaya Ballet and Contemporary Dance Studio is a
+              unique creative space that brings together leading professional
+              specialists in various fields of dance, music, and acting arts. It
+              is an arts center capable of uniting the interests of
+              professionals and enthusiasts, where every child and adult is
+              given the opportunity to explore and realize their full creative
+              and artistic potential.
+            </p>
+            <a href="#" class="about-inner__link"
+              >See More <i class="icon-arrow-right"></i
+            ></a>
+          </div>
+        </article>
+      </div>
+    </section>
     <script src="./js/main.js" type="module"></script>
   </body>
 </html>
