--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,9 @@
       <div class="container">
         <h2 class="about-title title">About us</h2>
         <div class="divider"></div>
-        <article class="about-inner d-flex justify-content-between align-items-start">
+        <article
+          class="about-inner d-flex justify-content-between align-items-start"
+        >
           <img
             src="assets/three-little-ballet-girls-tutu-posing-together-1.png.jpg"
             alt="About us Photo"
@@ -109,6 +111,220 @@
               >See More <i class="icon-arrow-right"></i
             ></a>
           </div>
+        </article>
+      </div>
+    </section>
+    <section class="schedule" id="schedule">
+      <div class="container">
+        <h2 class="schedule-title title">Schedule</h2>
+        <div class="divider"></div>
+        <article class="schedule-inner">
+          <table class="schedule-table schedule-inner__table">
+            <tr class="schedule-table__header">
+              <th>Start time</th>
+              <th colspan="3">Monday / Wednesday / Friday</th>
+            </tr>
+            <tr class="schedule-table__title">
+              <th></th>
+              <th>Hall №1</th>
+              <th>Hall №2</th>
+              <th>Hall №3</th>
+            </tr>
+            <tr>
+              <td>17:00</td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>18:00</td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>19:00</td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>20:00</td>
+              <td></td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr class="schedule-table__header">
+              <th>Start time</th>
+              <th colspan="3">Tuesday / Thursday / Saturday</th>
+            </tr>
+            <tr class="schedule-table__title">
+              <th></th>
+              <th>Hall №1</th>
+              <th>Hall №2</th>
+              <th>Hall №3</th>
+            </tr>
+            <tr>
+              <td>19:00</td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="class">
+                  <div class="class-left">
+                    <p>Class 1</p>
+                    <p>Teacher 1</p>
+                  </div>
+                  <div class="class-right">
+                    <p>20 places</p>
+                    <p>10 available places</p>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          </table>
         </article>
       </div>
     </section>
