gallery, contact sections

--- a/src/index.html
+++ b/src/index.html
@@ -328,6 +328,105 @@
         </article>
       </div>
     </section>
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <h2 class="gallery-title title">Gallery</h2>
+        <div class="divider"></div>
+        <div class="gallery-inner">
+          <div
+            class="filter d-flex align-items-center justify-content-between g-10"
+          >
+            <div class="filter-btns">
+              <button type="button" class="btn btn-primary">Hip-Hop</button>
+              <button type="button" class="btn btn-primary">Rock n roll</button>
+              <button type="button" class="btn btn-primary">Ballet</button>
+              <button type="button" class="btn btn-primary">Salsa</button>
+              <button type="button" class="btn btn-primary">Break dance</button>
+            </div>
+            <div class="filter-search">
+              <input type="text" placeholder="Search by title" />
+              <button
+                type="button"
+                class="filter-search__btn icon-search"
+              ></button>
+            </div>
+          </div>
+          <div class="gallery-content">
+            <article class="gallery-content__item">
+              <img src="assets/hip-hop-1.jpg" alt="Hip Hop 1" />
+              <div class="gallery-content__item-caption">
+                <h3>Hip Hop by Otabek</h3>
+                <p>Hip Hop</p>
+              </div>
+            </article>
+            <article class="gallery-content__item">
+              <img src="assets/hip-hop-2.jpg" alt="Hip Hop 2" />
+              <div class="gallery-content__item-caption">
+                <h3>Hip Hop by Jony</h3>
+                <p>Hip Hop</p>
+              </div>
+            </article>
+            <article class="gallery-content__item">
+              <img src="assets/hip-hop-3.jpg" alt="Hip Hop 3" />
+              <div class="gallery-content__item-caption">
+                <h3>Hip Hop by Avaz</h3>
+                <p>Hip Hop</p>
+              </div>
+            </article>
+            <article class="gallery-content__item">
+              <img src="assets/hip-hop-4.jpg" alt="Hip Hop 4" />
+              <div class="gallery-content__item-caption">
+                <h3>Hip Hop by Yahyo</h3>
+                <p>Hip Hop</p>
+              </div>
+            </article>
+          </div>
+          <div
+            class="gallery-pagination d-flex justify-content-center align-items-center"
+          >
+            <button type="button" class="btn btn-primary arrow">
+              <i class="icon-arrow-left"></i>
+            </button>
+            <button type="button" class="btn btn-primary active">1</button>
+            <button type="button" class="btn btn-primary">2</button>
+            <button type="button" class="btn btn-primary">3</button>
+            <button type="button" class="btn btn-primary">4</button>
+            <button type="button" class="btn btn-primary">5</button>
+            <button type="button" class="btn btn-primary arrow">
+              <i class="icon-arrow-right"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contact" id="contact">
+      <div class="container">
+        <h2 class="contact-title title">Contact</h2>
+        <div class="divider"></div>
+        <div class="contact-inner d-flex justify-content-between align-items-center">
+          <article class="contact-inner__content">
+            <div class="contact-inner__content-box">
+              <p class="contact-icon"><i class="icon-location"></i></p>
+              <p class="contact-text">Tashkent, Uzbekistan</p>
+            </div>
+            <div class="contact-inner__content-box">
+              <p class="contact-icon"><i class="icon-mail"></i></p>
+              <p class="contact-text"><a href="mailto:info@otabek.uz">info@otabek.uz</a></p>
+            </div>
+            <div class="contact-inner__content-box">
+              <p class="contact-icon"><i class="icon-phone"></i></p>
+              <p class="contact-text"><a href="tel:+998944100800">+998 (94) 410 08-00</a></p>
+            </div>
+          </article>
+          <article class="contact-inner__map">
+            <iframe
+              src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa14bf18178356b822aea7d2f2cb1f752cd5d8934e36f5004bbea7b4955f10550&amp;source=constructor"
+              frameborder="0"
+            ></iframe>
+          </article>
+        </div>
+      </div>
+    </section>
     <script src="./js/main.js" type="module"></script>
   </body>
 </html>
