gallery, server, API

--- a/src/index.html
+++ b/src/index.html
@@ -119,212 +119,10 @@
         <h2 class="schedule-title title">Schedule</h2>
         <div class="divider"></div>
         <article class="schedule-inner">
-          <table class="schedule-table schedule-inner__table">
-            <tr class="schedule-table__header">
-              <th>Start time</th>
-              <th colspan="3">Monday / Wednesday / Friday</th>
-            </tr>
-            <tr class="schedule-table__title">
-              <th></th>
-              <th>Hall №1</th>
-              <th>Hall №2</th>
-              <th>Hall №3</th>
-            </tr>
-            <tr>
-              <td>17:00</td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>18:00</td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>19:00</td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>20:00</td>
-              <td></td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <tr class="schedule-table__header">
-              <th>Start time</th>
-              <th colspan="3">Tuesday / Thursday / Saturday</th>
-            </tr>
-            <tr class="schedule-table__title">
-              <th></th>
-              <th>Hall №1</th>
-              <th>Hall №2</th>
-              <th>Hall №3</th>
-            </tr>
-            <tr>
-              <td>19:00</td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="class">
-                  <div class="class-left">
-                    <p>Class 1</p>
-                    <p>Teacher 1</p>
-                  </div>
-                  <div class="class-right">
-                    <p>20 places</p>
-                    <p>10 available places</p>
-                  </div>
-                </div>
-              </td>
-            </tr>
-          </table>
+          <table
+            class="schedule-table schedule-inner__table"
+            id="schedule-table"
+          ></table>
         </article>
       </div>
     </section>
@@ -333,15 +131,42 @@
         <h2 class="gallery-title title">Gallery</h2>
         <div class="divider"></div>
         <div class="gallery-inner">
-          <div
-            class="filter d-flex align-items-center justify-content-between g-10"
-          >
+          <div class="filter d-flex align-items-center justify-content-between g-10">
             <div class="filter-btns">
-              <button type="button" class="btn btn-primary">Hip-Hop</button>
-              <button type="button" class="btn btn-primary">Rock n roll</button>
-              <button type="button" class="btn btn-primary">Ballet</button>
-              <button type="button" class="btn btn-primary">Salsa</button>
-              <button type="button" class="btn btn-primary">Break dance</button>
+              <button type="button" class="btn active" data-filter="all">
+                All
+              </button>
+              <button
+                type="button"
+                class="btn"
+                data-filter="Hip-Hop"
+              >
+                Hip-Hop
+              </button>
+              <button
+                type="button"
+                class="btn"
+                data-filter="Rock n roll"
+              >
+                Rock n roll
+              </button>
+              <button
+                type="button"
+                class="btn"
+                data-filter="Ballet"
+              >
+                Ballet
+              </button>
+              <button type="button" class="btn" data-filter="Salsa">
+                Salsa
+              </button>
+              <button
+                type="button"
+                class="btn"
+                data-filter="Break dance"
+              >
+                Break dance
+              </button>
             </div>
             <div class="filter-search">
               <input type="text" placeholder="Search by title" />
@@ -351,51 +176,8 @@
               ></button>
             </div>
           </div>
-          <div class="gallery-content">
-            <article class="gallery-content__item">
-              <img src="assets/hip-hop-1.jpg" alt="Hip Hop 1" />
-              <div class="gallery-content__item-caption">
-                <h3>Hip Hop by Otabek</h3>
-                <p>Hip Hop</p>
-              </div>
-            </article>
-            <article class="gallery-content__item">
-              <img src="assets/hip-hop-2.jpg" alt="Hip Hop 2" />
-              <div class="gallery-content__item-caption">
-                <h3>Hip Hop by Jony</h3>
-                <p>Hip Hop</p>
-              </div>
-            </article>
-            <article class="gallery-content__item">
-              <img src="assets/hip-hop-3.jpg" alt="Hip Hop 3" />
-              <div class="gallery-content__item-caption">
-                <h3>Hip Hop by Avaz</h3>
-                <p>Hip Hop</p>
-              </div>
-            </article>
-            <article class="gallery-content__item">
-              <img src="assets/hip-hop-4.jpg" alt="Hip Hop 4" />
-              <div class="gallery-content__item-caption">
-                <h3>Hip Hop by Yahyo</h3>
-                <p>Hip Hop</p>
-              </div>
-            </article>
-          </div>
-          <div
-            class="gallery-pagination d-flex justify-content-center align-items-center"
-          >
-            <button type="button" class="btn btn-primary arrow">
-              <i class="icon-arrow-left"></i>
-            </button>
-            <button type="button" class="btn btn-primary active">1</button>
-            <button type="button" class="btn btn-primary">2</button>
-            <button type="button" class="btn btn-primary">3</button>
-            <button type="button" class="btn btn-primary">4</button>
-            <button type="button" class="btn btn-primary">5</button>
-            <button type="button" class="btn btn-primary arrow">
-              <i class="icon-arrow-right"></i>
-            </button>
-          </div>
+          <div class="gallery-content"></div>
+          <div class="gallery-pagination d-flex justify-content-center align-items-center"></div>
         </div>
       </div>
     </section>
@@ -403,7 +185,9 @@
       <div class="container">
         <h2 class="contact-title title">Contact</h2>
         <div class="divider"></div>
-        <div class="contact-inner d-flex justify-content-between align-items-center">
+        <div
+          class="contact-inner d-flex justify-content-between align-items-center"
+        >
           <article class="contact-inner__content">
             <div class="contact-inner__content-box">
               <p class="contact-icon"><i class="icon-location"></i></p>
@@ -411,11 +195,15 @@
             </div>
             <div class="contact-inner__content-box">
               <p class="contact-icon"><i class="icon-mail"></i></p>
-              <p class="contact-text"><a href="mailto:info@otabek.uz">info@otabek.uz</a></p>
+              <p class="contact-text">
+                <a href="mailto:info@otabek.uz">info@otabek.uz</a>
+              </p>
             </div>
             <div class="contact-inner__content-box">
               <p class="contact-icon"><i class="icon-phone"></i></p>
-              <p class="contact-text"><a href="tel:+998944100800">+998 (94) 410 08-00</a></p>
+              <p class="contact-text">
+                <a href="tel:+998944100800">+998 (94) 410 08-00</a>
+              </p>
             </div>
           </article>
           <article class="contact-inner__map">
