--- a/src/index.html
+++ b/src/index.html
@@ -131,53 +131,37 @@
         <h2 class="gallery-title title">Gallery</h2>
         <div class="divider"></div>
         <div class="gallery-inner">
-          <div class="filter d-flex align-items-center justify-content-between g-10">
+          <div
+            class="filter d-flex align-items-center justify-content-between g-10"
+          >
             <div class="filter-btns">
               <button type="button" class="btn active" data-filter="all">
                 All
               </button>
-              <button
-                type="button"
-                class="btn"
-                data-filter="Hip-Hop"
-              >
+              <button type="button" class="btn" data-filter="Hip-Hop">
                 Hip-Hop
               </button>
-              <button
-                type="button"
-                class="btn"
-                data-filter="Rock n roll"
-              >
+              <button type="button" class="btn" data-filter="Rock n roll">
                 Rock n roll
               </button>
-              <button
-                type="button"
-                class="btn"
-                data-filter="Ballet"
-              >
+              <button type="button" class="btn" data-filter="Ballet">
                 Ballet
               </button>
               <button type="button" class="btn" data-filter="Salsa">
                 Salsa
               </button>
-              <button
-                type="button"
-                class="btn"
-                data-filter="Break dance"
-              >
+              <button type="button" class="btn" data-filter="Break dance">
                 Break dance
               </button>
             </div>
             <div class="filter-search">
               <input type="text" placeholder="Search by title" />
-              <button
-                type="button"
-                class="filter-search__btn icon-search"
-              ></button>
             </div>
           </div>
           <div class="gallery-content"></div>
-          <div class="gallery-pagination d-flex justify-content-center align-items-center"></div>
+          <div
+            class="gallery-pagination d-flex justify-content-center align-items-center"
+          ></div>
         </div>
       </div>
     </section>
