--- a/src/index.html
+++ b/src/index.html
@@ -199,6 +199,8 @@
         </div>
       </div>
     </section>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/schedule.js"></script>
+    <script src="./js/gallery.js"></script>
   </body>
 </html>
