--- a/src/index.html
+++ b/src/index.html
@@ -199,8 +199,6 @@
         </div>
       </div>
     </section>
-    <script src="./js/main.js"></script>
-    <script src="./js/schedule.js"></script>
-    <script src="./js/gallery.js"></script>
+    <script src="./js/main.js"type="module"></script>
   </body>
 </html>
