fixed version of stylelint

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
               given the opportunity to explore and realize their full creative
               and artistic potential.
             </p>
-            <a href="#" class="about-inner__link"
+            <a href="./about.html" class="about-inner__link"
               >See More <i class="icon-arrow-right"></i
             ></a>
           </div>
